--- a/PillsPromise/AlarmShow.storyboard
+++ b/PillsPromise/AlarmShow.storyboard
@@ -33,6 +33,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="AlarmMedicineTextLabel" destination="bKL-Tj-saG" id="Wpk-jf-bZg"/>
+                                    <segue destination="dFG-kx-SUu" kind="show" trigger="accessoryAction" id="1B3-OP-flH"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -41,13 +42,16 @@
                             <outlet property="delegate" destination="4fY-gN-FWx" id="4ca-yT-Vhi"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="7yv-XO-qms">
+                    <navigationItem key="navigationItem" title="약쏙" id="7yv-XO-qms">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="PPS-Wg-wVT">
                             <connections>
                                 <segue destination="dFG-kx-SUu" kind="show" id="MO7-rH-T3u"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="AlarmTableView" destination="mum-14-Fkm" id="JeV-M7-0eF"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cbe-R0-th5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -61,7 +65,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="73l-1N-FpY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1692" y="13"/>
+            <point key="canvasLocation" x="1741" y="130"/>
         </scene>
         <!--Alarm-->
         <scene sceneID="eQd-b5-8Zg">
@@ -82,4 +86,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="129.91071428571428"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="MO7-rH-T3u"/>
+    </inferredMetricsTieBreakers>
 </document>
